# Kevin_MCP

./: .gitignore  main.py  pyproject.toml
KEVIN EXTRAS/: MCPTools conversion walktrhough.md  claude_explaination.md  convert MCPTools to other frameworks.md  oai_explaination.md
v2/: README.md  canada.md  main.py  mcp_client.py  pydantic_mcp_agent streamtry.py  pydantic_mcp_agent tracing.py  pydantic_mcp_agent.py  pydantic_mcp_agent_alternative.py  requirements.txt
