[project]
name = "kevin-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=3.7.0",
    "httpx>=0.24.0",
    "logfire>=0.6.0",
    "mcp>=1.6.0",
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.46",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
